week 09 solution added

--- a/lab-project/inventorysystem/src/main/resources/application.properties
+++ b/lab-project/inventorysystem/src/main/resources/application.properties
@@ -10,3 +10,19 @@ config.logger.level=TRACE
 config.inventory.low-stock-threshold=${INVENTORY_THRESHOLD:10}
 
 config.transaction.reminder-safety-window-days=5
+
+spring.datasource.url=jdbc:postgresql://localhost:5433/inventory-system
+spring.datasource.username=postgres
+spring.datasource.password=pgadmin
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Load initial schema and data
+spring.sql.init.mode=always
+# never - don't search for data initialization
+# always - always execute data initialization
+spring.sql.init.schema-locations=classpath:db/init.sql
+spring.sql.init.data-locations=classpath:db/data.sql
