Solution for week 10

--- a/lab-project/inventorysystem/pom.xml
+++ b/lab-project/inventorysystem/pom.xml
@@ -53,7 +53,14 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-  </dependencies>
+
+		<!-- Flyway integration -->
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+      		<artifactId>flyway-core</artifactId>
+			<version>9.22.3</version>
+    	</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
